# data-juicer-agents

./: .gitignore  README.md  README_ZH.md  index.html  pyproject.toml
.github/workflows/: deploy_sphinx_docs.yml  unittest-simple.yml  unittest.yml
data/: hard-out-02.jsonl  hard-out-03.jsonl  hard-out-07.jsonl
data_juicer_agents/: __init__.py  cli.py  session_cli.py
data_juicer_agents/capabilities/: __init__.py
dj-skills/: SKILL.md  SKILL_ZH.md  local_model_skills.md
docs/: Advanced.md  Advanced_ZH.md  AgentIntro.md  AgentIntro_ZH.md  Extension.md  Extension_ZH.md  QuickStart_ZH.md  cli.md  cli_ZH.md  overview.md  overview_ZH.md  quick_start.md  quick_start_ZH.md  tools.md  tools_ZH.md
en/main/: .buildinfo  (+9 more)
eval_cases/: eval_config.yaml  run_eval.py  score_eval.py
interactive_recipe/: README.md  README_ZH.md
qa-copilot/: DEMO.md  DEMO_ZH.md  README.md  README_ZH.md  agent_helper.py  app_deploy.py  operator_tools_adapter.py  prompts.py  session_logger.py  setup_server.sh
skills/: SKILL.md  apply.md  debug.md  dev.md  plan.md  retrieve.md  session.md
tests/: __init__.py  test_agent.py  test_apply_deadlock.py  test_apply_execution.py  test_as_studio_app.py  test_cache_manager.py  test_cli_output_levels.py  test_cli_validation.py  test_dataset_probe.py  test_dj_config_bridge.py  test_evaluate_advanced.py  test_evaluate_command.py  test_evaluate_llm_full.py  test_executor_timeout.py  test_multi_turn_recipe.py  test_op_retrieval.py  test_plan_command.py  test_plan_error_observability.py  test_plan_full_llm.py  test_plan_retrieve_integration.py  test_plan_revision.py  test_plan_schema.py  test_plan_service.py  test_planner_react_logging.py  test_result_builder.py  test_retrieval_service.py  test_retrieve_command.py  test_retrieve_tool_dataset_forwarding.py  test_session_agent.py  test_session_cli.py  test_tool_command.py  test_tool_contracts.py  test_tools_agentscope_binding.py  test_trace_command.py  test_trace_replay.py  test_tui_event_adapter.py  test_tui_noise_filter.py  test_tui_renderer.py  test_web_api_cli.py  test_web_config_store.py  (+4 more)
(+1910 files in other folders)
